--- a/db-dev.properties
+++ b/db-dev.properties
@@ -1,1 +1,4 @@
-aplication.name=app-microservicios-demo-dev
+application.name=app-microservicios-demo-dev
+spring.datasource.url=
+spring.datasource.password=
+spring.datasource.username=
